--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.2.6",
     "@astrojs/check": "^0.4.1",
+    "@fontsource/shippori-mincho": "^5.0.11",
+    "astro": "^4.2.6",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "astro-icon": "^1.0.3",
+    "wrangler": "^3.25.0"
   }
 }
