--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.4.1",
+    "@astrojs/tailwind": "^5.1.0",
     "@fontsource/shippori-mincho": "^5.0.11",
     "astro": "^4.2.6",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
