--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/grecaptcha": "^3.0.7",
     "astro-icon": "^1.0.4",
     "wrangler": "^3.25.0"
   }
