--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
   "dependencies": {
     "@astrojs/check": "^0.4.1",
     "@astrojs/tailwind": "^5.1.0",
+    "@fontsource-variable/inconsolata": "^5.0.18",
+    "@fontsource-variable/inter": "^5.0.18",
+    "@fontsource-variable/open-sans": "^5.0.29",
+    "@fontsource-variable/oswald": "^5.0.20",
     "@fontsource/shippori-mincho": "^5.0.11",
+    "@fontsource/slabo-27px": "^5.0.20",
+    "arialmac_api": "^2.0.9",
     "astro": "^4.2.6",
     "astro-iconify": "^1.2.0",
     "tailwindcss": "^3.4.1",
